crates/cuda-device/tests/compile_fail/thread_coord_2d_u32_native_coordinates.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/thread_coord_2d_u32_native_coordinates.rs:11:38
   |
11 |     let _ = __internal::coord_2d_u32(launch_context);
   |             ------------------------ ^^^^^^^^^^^^^^ expected `&LaunchContext<'_, Domain2, ...>`, found `&LaunchContext<'_, Domain2>`
   |             |
   |             arguments to this function are incorrect
   |
   = note: expected reference `&cuda_device::LaunchContext<'_, cuda_device::__internal::Domain2, cuda_device::__internal::U32Coordinates>`
              found reference `&'kernel cuda_device::LaunchContext<'kernel, cuda_device::__internal::Domain2, cuda_device::__internal::NativeCoordinates>`
note: function defined here
  --> src/thread.rs
   |
   |     pub fn coord_2d_u32<'kernel>(
   |            ^^^^^^^^^^^^
